--- a/Week_1/Bootstrap4/conFusion/index.html
+++ b/Week_1/Bootstrap4/conFusion/index.html
@@ -123,7 +123,7 @@
                                     <input type="radio" name="options" id="option1" autocomplete="off" checked> NonSmoking
                                     </label>
                                     <label class="btn btn-danger">
-                                    <input type="radio" name="options" id="option2" autocomplete="off"> SmokingCancer
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
                                     </label>
                                 </div>
                             </div>
@@ -220,7 +220,15 @@
                         <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         </a>
-                    
+
+                        <div class="btn-group" id="carouselButton">
+                            <button class="btn btn-danger btn-sm" id="carousel-pause">
+                                <span class="fa fa-pause"></span>
+                            </button>
+                            <button class="btn btn-danger btn-sm" id="carousel-play">
+                                <span class="fa fa-play"></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -330,6 +338,18 @@
         });
         </script>
     -->
+    <script>
+        $(document).ready(function(){
+            $('#mycarousel').carousel({interval:2000});
+            $('#carousel-pause').click(function(){
+                $('#mycarousel').carousel(pause);
+            })
+            $('#carousel-play').click(function(){
+                $('#mycarousel').carousel(cycle);
+            })
+        })
+    </script>
+
 </body>
 
 </html>
