--- a/Week_1/Bootstrap4/conFusion/index.html
+++ b/Week_1/Bootstrap4/conFusion/index.html
@@ -30,7 +30,8 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contactf</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a  id="loginButton" role="button">
+                        <!--removed: data-toggle="modal" data-target="#loginModal"-->
                         <span class="fa fa-sign-in">
                             Login
                         </span>
@@ -47,6 +48,7 @@
                 <div class="modal-header">
                     <h4 class="modal-title">Login </h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <!--removed: -->
                 </div>
                 <div class="modal-body">
                     <form>
@@ -84,10 +86,11 @@
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve Table </h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <!--removed: data-dismiss="modal"-->
                 </div>
                 <div class="modal-body">
                     <div class="card-body">
-                        <form>
+                        <form id="reserveModalForm">
                             <div class="form-group row">
                                 <label for="guests" class="col-12 col-sm-12 col-md-2 col-form-label">Number of Guests</label>
                                     <label class="custom-control custom-radio">
@@ -171,7 +174,8 @@
                 <div class="col-xs-12 col-sm-3">
                     <p style="padding:20px;"></p>
                 <p>
-                    <a id="reserveBtn" type="button" class="btn btn-warning btn-block nav-link" role="button" data-target="#reserveModal" data-toggle="modal" data-html="true" title="Or Call us at <br><strong>+4550184803</strong></br>" data-placement="bottom" style="color:black">Reserve Table</a>
+                    <a id="reserveBtn" type="button" class="btn btn-warning btn-block nav-link" role="button" title="Or Call us at <br><strong>+4550184803</strong></br>" data-placement="bottom" style="color:black">Reserve Table</a>
+                    <!--removed: data-target="#reserveModal" data-toggle="modal" data-html="true" -->
                 </p>
             </div>
             </div>
@@ -328,30 +332,45 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    
+    <script>
+    
+
+$(document).ready(function(){
+	$('#mycarousel').carousel({interval:2000});
+	$('#carouselButton').click(function(){
+		if ($('#carouselButton').children('span').hasClass('fa-pause')){
+		$('#mycarousel').carousel('pause')
+		$('#carouselButton').children('span').removeClass('fa-pause')
+		$('#carouselButton').children('span').addClass('fa-play')
+		}
+	else if ($('#carouselButton').children('span').hasClass('fa-play')){
+		$('#mycarousel').carousel('cycle')
+		$('#carouselButton').children('span').removeClass('fa-play')
+		$('#carouselButton').children('span').addClass('fa-pause')
+		}
+	});
+
+
+
+
+	$('#reserveBtn').click(function(){
+		$('#reserveModal').modal('show');
+	});
+	$('#loginButton').click(function(){
+		$('#loginModal').modal('show');
+	});
+});
+    </script>
+
     <!--<script>
         $(document).ready(function() {
             $('[data-toggle="tooltip"]').tooltip();
         });
         </script>
     -->
-    <script>
-        $(document).ready(function(){
-            $('#mycarousel').carousel({interval:2000});
-            $('#carouselButton').click(function(){
-                if ($('#carouselButton').children('span').hasClass('fa-pause')){
-                $('#mycarousel').carousel('pause')
-                $('#carouselButton').children('span').removeClass('fa-pause')
-                $('#carouselButton').children('span').addClass('fa-play')
-                }
-            else if ($('#carouselButton').children('span').hasClass('fa-play')){
-                $('#mycarousel').carousel('cycle')
-                $('#carouselButton').children('span').removeClass('fa-play')
-                $('#carouselButton').children('span').addClass('fa-pause')
-                }
-            });
-        });
-    </script>
 
 </body>
 
 </html>
+
